Fix Table fixed header align issue, close #4637

--- a/components/table/style/index.less
+++ b/components/table/style/index.less
@@ -490,6 +490,7 @@
     padding-bottom: 20px;
     margin-bottom: -20px;
     margin-right: -18px;
+    padding-right: 18px;
   }
 
   /* fix firefox scrollbar bug */
